--- a/steno/templates/base.html
+++ b/steno/templates/base.html
@@ -12,7 +12,7 @@
 
 <header class="site-header">
 
-<h1 class="site-logo"><a href="/">Eurobot Article browser</a></h1>
+<h1 class="site-logo"><a href="/">Steno</a></h1>
 <nav>
 <a href="/help">help</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="/bulktag">bulk tag</a>
