--- a/steno/templates/help.html
+++ b/steno/templates/help.html
@@ -47,6 +47,8 @@ The equals sign (<code>=</code>) means that the whole field must match.</dd>
 <dt><code>published:=""</code></dt>
 <dd>Match all articles with a blank publication date.</dd>
 
+<dt><code>kw:"better together"</code></dt>
+<dd>All articles with a "better together" keyword</dd>
 
 </dl>
 
@@ -63,6 +65,7 @@ These are the fields you can query:
   <dt><code>published</code></dt><dd>the date (and, optionally, time) that the article was first published</dd>
   <dt><code>updated</code></dt><dd>the date (and, optionally, time) that the article was last updated. Might be blank.</dd>
   <dt><code>tags</code></dt><dd>a list of tags that have been applied to the article</dd>
+  <dt><code>kw</code></dt><dd>List of keywords, as scraped from the original article (some sites have good keywords, others have crap)</dd>
   <dt><code>pub</code></dt>
   <dd>The publication. One of:
     <ul>
