--- a/steno/templates/search.html
+++ b/steno/templates/search.html
@@ -48,6 +48,7 @@
                 <th>Pub</th>
                 <th>Published</th>
                 <th>URLs</th>
+                <th>KW</th>
                 <th>Tags</th>
               </tr>
             </thead>
@@ -59,6 +60,7 @@
             <td>{{.Pub}}</td>
             <td>{{.Published}}</td>
             <td>{{range .URLs}}<a href="{{.}}">{{.}}</a><br/>{{end}}</td>
+            <td><div class="kws">{{range .KW}}{{.}}, {{end}}</div></td>
             <td>{{range .Tags}}<span class="tag tag-{{.}}">{{.}}</span>{{end}}</td>
           </tr>
           {{end}}
@@ -98,11 +100,11 @@
   </template>
 <script src="/helpers.js"></script>
 <script>
-  toolup(
+/*  toolup(
     document.getElementById("helpers"),
     document.querySelector('.searchform input[name="q"]')
     );
-
+*/
   var opSel = document.getElementById("op");
   var tagInp = document.getElementById("tag");
 
